<resources>
    <string name="app_name">Mental Snapp</string>
    <string name="queued_exercises">Queued Exercises</string>
    <string name="profile">Profile</string>
    <string name="report_an_issue">Technical support</string>
    <string name="more">More</string>
    <string name="login_message_1">Mental Snapp is a video diary service for people actively managing their mental health.
We believe in the power of film to change outcomes Try it for yourself - record your own story.</string>
    <string name="email">EMAIL</string>
    <string name="email_small">Email</string>
    <string name="enter_your_email_msg">Enter your Email</string>
    <string name="password">Password</string>
    <string name="password_hint">\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_message_2">Do not have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email_not_valid_text">Please enter valid email</string>
    <string name="password_not_valid_text">Enter password</string>
    <string name="email_empty">Enter email</string>
    <string name="enter_your_first_name_msg">Enter your first name</string>
    <string name="enter_your_email_add_msg">Enter your email address</string>
    <string name="enter_your_phone_msg">Enter your Phone number (Optional)</string>
    <string name="enter_your_dob_msg">Enter your Date of birth (Optional)</string>
    <string name="phone">Phone (Optional)</string>
    <string name="dob">Date of Birth (Optional)</string>
    <string name="i_am">I AM (Optional)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account_msg">Already have an account?</string>
    <string name="login">Login</string>
    <string name="invalid_username">Username should be alphabets and numbers only</string>
    <string name="password_length_error">Password should contain minimum 6 characters</string>
    <string name="password_alphanumeric_error">Password should be alphanumeric</string>
    <string name="name_incorrect_error">Name should be alphanumeric</string>
    <string name="enter_valid_number">Please enter valid phone</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="enter_valid_password">Please enter password</string>
    <string name="enter_confirm_new_password">Please enter confirm new password</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="password_dont_match">Password and confirm password fields don\'t match</string>
    <string name="change_password">Change Password</string>
    <string name="delete_profile">DELETE PROFILE</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="reenter_new_password">Re-Enter new password</string>
    <string name="enter_current_password">Please enter current password</string>
    <string name="skip">Skip</string>
    <string name="privacy_policy_message1"><b>Privacy Policy</b></string>
    <string name="privacy_policy_message2">Last updated: January 03, 2017</string>
    <string name="privacy_policy_message3">Mental Snapp Ltd (\"us\", \"we\", or \"our\") operates the
        Mental Snapp mobile application (the \"App\").\n\nThis page informs you of our policies regarding the
        collection, use and disclosure of Personal  Information when you use our App.\n\nWe will not use or share your
        information with anyone except as described in this Privacy Policy.\n\nWe use your Personal Information for providing
        and improving the App. By using the App, you  agree to the collection and use of information in accordance with this
        policy. Unless otherwise  defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as
        in our  terms and conditions.\n\nBy using the App, you agree to the collection and use of information in accordance with
        this policy.\n\n<b>How Do We Collect Your Information?</b>\n\nWhile using our App, we may collect certain personally
        identifiable information that can be used to  contact or identify you. Personally identifiable information may include,
        but is not limited to:\n\n\u2022 Name;\n\u2022 Video Content relating to mental health;\n\u2022 Contact information such as email addresses
        and telephone numbers; and\n\u2022 Demographic information such as post code, preferences and interests\n\n(together \"Personal Information\").\n\nWhen you access the App by or through a mobile device, we may also collect certain information
        automatically, including, but not limited to, the type of mobile device you use, your mobile device  unique ID, the IP
        address of your mobile device, your mobile operating system, the type of mobile  Internet browser you use and other
        statistics.\n\n<b>How Do We Use Your Information?</b>\n\nWe use your Personal Information for providing and improving
        the App. This includes:\n\n\u2022 Providing and managing your Account;\n\u2022 Providing and managing your access to the App;\n\u2022 Personalising
        and tailoring your experience when accessing the App;\n\u2022 Responding to communications from you;\n\u2022 Market research; and\n
        \u2022 Analysing your use of the App and gathering feedback to enable us to continually improve the App  and your user experience.\n\n
        With your permission and/or where permitted by law, we may also use your Personal Information  for marketing purposes which
        may include contacting you with newsletters, marketing or  promotional materials and other information that may be of interest
        to you. You may opt out of  receiving any, or all, of these communications from us by following the unsubscribe link or
        instructions provided in any email we send.\n\n<b>How and Where Do We Store Your Information?</b>\nThe data that we collect
        from you will not be transferred to, or stored at, a destination outside the  European Economic Area (EEA). However, data
        collected may be processed by staff operating  outside the EEA who work for us or for one of our suppliers. These staff may
        be engaged in the  fulfilment of your request, order or reservation and the provision of support services. We will take
        all steps reasonably necessary to ensure that your data is treated securely and in accordance with  this Privacy Policy.\n\n
        We only keep your Personal Information for as long as we need to in order to use it as described  above, and/or for as long
        as we have your permission to keep it.\n\nIt is important to remember that the transmission of information via the internet
        may not be  completely secure and that you are advised to take suitable precautions when transmitting to us  information via
        the internet.\n\nIf your personal details change, you may update them by accessing the App. If you have any  questions about
        how we use information collected which relates to you, please contact us using the  contact details provided below.\n\n<b>Who
        Do We Transfer Your Information To?</b>\nWe may employ third party companies and individuals to facilitate our App, to
        provide the App on  our behalf, to perform App-related services or to assist us in analysing how our App is used. These
        third parties have access to your Personal Information only to perform these tasks on our behalf and  are obligated not to
        disclose or use it for any other purpose.\n\nWe will disclose your Personal Information where required to do so by law or
        in accordance with an  order of a court of competent jurisdiction, or if we believe that such action is necessary to
        comply  with the law and the reasonable requests of law enforcement or to protect the security or integrity of  our App.\n\n
        If Mental Snapp Ltd is involved in a merger, acquisition or asset sale, your Personal Information  may be transferred. We
        will provide notice before your Personal Information is transferred and  becomes subject to a different Privacy Policy. In
        the event of such a transfer of information, your  rights under the Data Protection Act 1998 are not affected.\n\nIn the
        event that a dispute arises with regards to the international transfer of data, you agree that the  courts of England and
        Wales shall have exclusive jurisdiction over the matter.\n\n<b>How Do I Access My Information/Data?</b>\nThe Data Protection
        Act 1998 (\"Act\") gives you the right to access information that we may hold  about you. Any access request will be processed
        by us within a reasonable amount of time.\n\nAny access request will be subject to a fee of £5 to meet our costs in providing
        you with details of  the information we hold about you.\n\n<b>Will the App Contain Links to Third Party Websites?</b>\nWe
        do not disclose information about identifiable individuals to our advertisers, but our App may  contain links to other sites
        that are not operated by us. We use these third party links to support and  enhance your experience of the App.\n\nYou should
        note that clicking on a third party link may direct you to that third party\'s site. We  strongly advise you to review the
        privacy policy of every site you visit. We have no control over,  and assume no responsibility for the content, privacy policies
        or practices of any third party sites or  services.\n\n<b>Do We Collect Personal Information From Children?</b>\nOur App
        does not address anyone under the age of 18.\n\nWe do not knowingly collect personally identifiable information from anyone
        under 18. If you are a  parent or guardian and you are aware that your child has provided us with Personal Information,
        please contact us. If we become aware that we have collected Personal Information from anyone  under the age of 18 without
        verification of parental consent, we will take steps to remove that  information from our servers.\n\n<b>Changes to This
        Privacy Policy</b>\nWe may update our Privacy Policy from time to time. We will notify you of any changes by posting
        the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for  any changes. Changes
        to this Privacy Policy are effective when they are posted on this page.\n\nIf we make any material changes to this Privacy
        Policy, you will be notified either through the  email address you have provided us, by placing a prominent notice on our
        App, or by displaying the  new privacy policy on-screen which you may be required to read and accept in order to continue
        your use of the App.\n\n<b>Jurisdiction</b>\nThis Policy shall be governed and construed in accordance with the laws of
        England and Wales,  without regard to its conflict of law provisions.\n\n<b>Contact Us</b>\nIf you have any questions
        about these Terms, please contact us by email at  feedback@mentalsnapp.com, by telephone on 08009708363 or by post at
        Mental Snapp Ltd, 101  Bramshot Avenue, London, SE7 7HX.\n\nPlease ensure that your query is clear, particularly if it is a
        request for information about the  Personal Information we hold about you.</string>
    <string name="text_photo_library">Photo Library</string>
    <string name="text_take_photo">Take Photo</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_delete_photo">Delete Photo</string>
    <string name="other">Other</string>
</resources>